--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,9 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-build_number_decrement:
-- '1000'
 c_compiler:
-- toolchain_c
+- clang
+c_compiler_version:
+- '9'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -17,8 +17,3 @@ ncurses:
 pin_run_as_build:
   ncurses:
     max_pin: x.x
-zip_keys:
-- - c_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
