--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,19 @@
-{% set version = "5.6.2" %}
+{% set version = "5.8" %}
 
 package:
   name: zsh
   version: {{ version }}
 
 source:
-  url: https://sourceforge.net/projects/zsh/files/zsh/{{ version }}/zsh-{{ version }}.tar.xz/download
+  url: https://cfhcable.dl.sourceforge.net/project/zsh/zsh/{{ version }}/zsh-{{ version }}.tar.xz
   fn: zsh-{{ version }}.tar.xz
-  sha256: a50bd66c0557e8eca3b8fa24e85d0de533e775d7a22df042da90488623752e9e
+  sha256: dcc4b54cc5565670a65581760261c163d720991f0d06486da61f8d839b52de27
   patches:
     # Skip a test that fails on CI, some filesystem weirdness
     - skip-N-cond-test.patch
 
 build:
-  number: 1001
+  number: 0
   skip: true  # [win]
   script: |
     ./configure --prefix="$PREFIX" --with-tcsetpgrp --enable-pcre
@@ -36,13 +36,13 @@ test:
     - zsh -c 'echo hi'
 
 about:
-  home: http://www.zsh.org
+  home: https://zsh.org/
   license: Custom
   license_family: MIT
   license_file: LICENCE
   summary: 'Zsh is a shell designed for interactive use, although it is also a powerful scripting language.'
-  doc_url: http://zsh.sourceforge.net/Doc/Release/zsh_toc.html
-  dev_url: https://sourceforge.net/p/zsh/code/ci/master/tree/
+  doc_url: https://zsh.sourceforge.io/Doc/Release/zsh_toc.html
+  dev_url: https://sourceforge.net/p/zsh/code/ci/master/tree
 
 extra:
   recipe-maintainers:
