--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,5 +5,8 @@ github:
   branch_name: main
   tooling_branch_name: main
 provider:
-  linux_aarch64: default
-  linux_ppc64le: default
+  linux_aarch64: native
+  linux_ppc64le: native
+build_platform:
+  osx_arm64: osx_64
+test: native_and_emulated
