--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,6 +15,7 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
+    - {{ stdlib("c") }}
     - make
     - gnuconfig   # [unix]
   host:
@@ -28,7 +29,7 @@ test:
 
 about:
   home: https://zsh.org/
-  license: Custom
+  license: MIT
   license_family: MIT
   license_file: LICENCE
   summary: Zsh is a shell designed for interactive use, although it is also a powerful scripting language.
